--- a/Matts Easy Pokemon Guessing Game/index.html
+++ b/Matts Easy Pokemon Guessing Game/index.html
@@ -1,8 +1,9 @@
 <!DOCTYPE html>
-<html>
+<html >
 <head>
     <title></title>
     <meta charset="utf-8" />
+    <script data-require="angular.js@*" data-semver="1.3.15" src="https://code.angularjs.org/1.3.15/angular.js"></script>
     <link href="kendo/styles/kendo.mobile.all.min.css" rel="stylesheet" />
     <link href="styles/main.css" rel="stylesheet" />
 
