--- a/Matts Easy Pokemon Guessing Game/index.html
+++ b/Matts Easy Pokemon Guessing Game/index.html
@@ -6,6 +6,7 @@
     <script data-require="angular.js@*" data-semver="1.3.15" src="https://code.angularjs.org/1.3.15/angular.js"></script>
     <link href="kendo/styles/kendo.mobile.all.min.css" rel="stylesheet" />
     <link href="styles/main.css" rel="stylesheet" />
+    <link href="styles/home.css" rel="stylesheet" />
 
     <script src="cordova.js"></script>
     <script src="kendo/js/jquery.min.js"></script>
@@ -25,13 +26,13 @@
 
         <!-- application views will be rendered here -->
         
-        <div data-role="footer">
+        <!--<div data-role="footer">
             <div data-role="tabstrip">
                 <a href="views/home.html" data-icon="home">Home</a>   
                 <a href="views/settings.html" data-icon="settings">Settings</a>
                 <a href="views/contacts.html" data-icon="contacts">Contacts</a>
             </div>
-        </div>
+        </div>-->
     </div>
 
 </body>
